// Common subproject — shared domain code, compiles against vanilla MC via Loom.
// No splitEnvironmentSourceSets(): client code lives in fabric/.
//
// TODO(multiloader): swap net.fabricmc.fabric-loom-remap here for net.neoforged.moddev.
//   The blocker is that common/ currently imports Fabric API directly (~25 classes across the codebase).
//   When ready:
//   - Replace the loom {} block with neoForge { neoFormVersion = neo_form_version }
//   - Remove Fabric API / fabric-loader dependencies (common should depend only on vanilla MC)
//   - Move FabricBlockEntityTypeBuilder usage out of LogisticsMod.java behind an abstraction
//   - Apply multiloader-loader in neoforge/build.gradle to compile common sources there
plugins {
    id 'multiloader-common'
    id 'net.fabricmc.fabric-loom-remap'
}

repositories {
    maven { url = "https://maven.terraformersmc.com/releases/" }
    maven { name = "Jared's maven"; url = "https://maven.blamejared.com/" }
}

loom {
    // No splitEnvironmentSourceSets() — common has no client split.
    // No mods {} block — common is a compilation target, not a runnable mod.
    accessWidenerPath = file("src/main/resources/logistics.accesswidener")
}

dependencies {
    minecraft "com.mojang:minecraft:${rootProject.minecraft_version}"
    mappings loom.officialMojangMappings()

    modImplementation "net.fabricmc:fabric-loader:${rootProject.fabric_loader_version}"
    modImplementation "net.fabricmc.fabric-api:fabric-api:${rootProject.fabric_version}"

    // Team Reborn Energy API (bundled into the Fabric jar via include in fabric/build.gradle)
    modImplementation("teamreborn:energy:${rootProject.fabric_energy_version}")

    // JEI — compile only; players install separately at runtime
    modCompileOnly("mezz.jei:jei-${rootProject.minecraft_version}-fabric-api:${rootProject.jei_version}")

    // Test infrastructure
    testImplementation "org.junit.jupiter:junit-jupiter:${rootProject.junit_version}"
    testImplementation "net.fabricmc:fabric-loader-junit:${rootProject.fabric_loader_version}"
    testImplementation "org.assertj:assertj-core:${rootProject.assertj_version}"
}

apply plugin: 'jacoco'

sourceSets {
    test {
        java { srcDir 'src/test/java' }
    }
}

tasks.withType(JavaCompile).configureEach {
    it.options.release = rootProject.java_version.toInteger()
}

test {
    useJUnitPlatform()
    testLogging {
        events "passed", "skipped", "failed"
        exceptionFormat = "full"
        showStandardStreams = false
    }
    failFast = false
    maxParallelForks = Runtime.runtime.availableProcessors().intdiv(2) ?: 1
    finalizedBy jacocoTestReport
}

jacocoTestReport {
    dependsOn test
    reports {
        html.required = true
        xml.required = true
    }
    classDirectories.setFrom(files(classDirectories.files.collect {
        fileTree(dir: it, include: ['com/logistics/**'])
    }))
}

java {
    withSourcesJar()
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

jar {
    inputs.property "archivesName", project.base.archivesName
    from("../LICENSE") {
        rename { "${it}_${inputs.properties.archivesName}" }
    }
}
